adding cursor and css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daphne Chiu</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  Daphne Chiu's site welcome
+  <h1></h1>
+  <script src="cursor.js"></script>
 </body>
 </html>
