--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link rel="shortcut icon" href="image/beans.png" type="image/x-icon">
 </head>
 <body>
-  <h1></h1>
-  <script src="cursor.js"></script>
+  <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
+  <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
+  <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
+  <span class="my-name">daphnechiu</span>
+  <script src="cursor.js">
+  </script>
 </body>
 </html>
