--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
   <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
   <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
   <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
-  <span class="my-name">daphnechiu</span>
+  <span class="my-name">daphnechiu, software engineer, square</span>
   <script src="cursor.js">
   </script>
+  <div class="links">
+    <a target="_blank" href="https://daphnechiu.com">daphnechiu.com</a>
+    <a target="_blank" href="https://github.com/daphnechiu">github.com/daphnechiu</a>
+    <a target="_blank" href="https://linkedin.com/in/daphnekc">linkedin.com/in/daphnekc</a>
+  </div>
 </body>
 </html>
