centre my content

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
   <link rel="shortcut icon" href="image/beans.png" type="image/x-icon">
 </head>
 <body>
-  <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
-  <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
-  <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
-  <span class="my-name">daphnechiu, software engineer, square</span>
+  <div class="my-content">
+    <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
+    <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
+    <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
+    <span class="my-name">daphnechiu, software engineer, square</span>
+  </div>
   <script src="cursor.js">
   </script>
+  <div class="shapes">
+    <svg class="square" xmlns="http://www.w3.org/2000/svg" height="80px" width="80px" viewBox="0 0 512 512" preserveAspectRatio="none"><polygon points="512 0, 512 512, 0 512, 0 0" fill="#a3d657"></polygon></svg>
+    <svg class="triangle" xmlns="http://www.w3.org/2000/svg" height="100px" width="100px" viewBox="0 0 512 512" preserveAspectRatio="none"><polygon points="256 0, 512 512, 0 512" fill="#f29bcb"></polygon></svg>
+    <svg class="circle" xmlns="http://www.w3.org/2000/svg" height="205px" width="205px" viewBox="0 0 512 512" preserveAspectRatio="none"><circle cx="256" cy="256" r="256" fill="#8aeacd"></circle></svg>
+  </div>
   <div class="links">
     <a target="_blank" href="https://daphnechiu.com">daphnechiu.com</a>
     <a target="_blank" href="https://github.com/daphnechiu">github.com/daphnechiu</a>
