--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="image/beans.png" type="image/x-icon">
 </head>
 <body>
+  <div class="mobile-only">// oops, TODO: mobile. Go on desktop it looks better</div>
   <div class="my-content">
     <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
     <img src="https://media0.giphy.com/media/wjIDrGKbvuGxW/giphy.gif" alt="" srcset="">
